Push body content down to avoid overlapping navbar

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@
 
 body {
     font-family: var(--primary-font);
+    padding-top: 57.15px; /*pushes content of the body down to avoid navbar covering heading*/
 }
 
 h1,
